# quanttools

./: .gitignore  AGENTS.md  LICENSE  README.md  codex.md  poetry_only_data_ml.txt  pr_message.md  pyproject.toml  wipe.sh
.github/workflows/: python-ci.yml
models/bayes/: ar1.stan
models/fundamental/: README.md
src/quanttools/: __init__.py  backtest.py  execution.py  indicators.py  strategy.py
src/quanttools/brokers/: __init__.py  robinhood.py  tdameritrade.py
src/r/: bayes_ar1.R
src/ykp/: __init__.py  data.py  indicators.py  options.py  strategy.py  utils.py
tests/: conftest.py  test_backtest.py  test_data.py  test_execution.py  test_indicators.py  test_options_indicators.py  test_options_strategy.py  test_strategy.py  test_utils.py
tests/bayes/: test_ar1_model.R
tests/brokers/: __init__.py  test_robinhood.py  test_tdameritrade.py
