[tool.poetry]
name = "ykp"
version = "0.1.0"
description = ""
authors = ["pitcany <pitcany@gmail.com>"]
readme = "README.md"
packages = [{include = "ykp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core data science dependencies
[tool.poetry.group.data]
optional = true

[tool.poetry.group.data.dependencies]
numpy = "^1.25"
pandas = "^2.1"
scipy = "^1.11"

# Machine learning dependencies
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.3"
xgboost = "^3.0.5"
lightgbm = "^4.6.0"
catboost = "^1.1"
optuna = "^4.5"
mlflow = "^3.4"
wandb = "^0.22"
shap = "^0.48"
imbalanced-learn = "^0.14"
category-encoders = "^2.8"

# Visualization dependencies
[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^6.0"
altair = "^5.0"

# Notebook dependencies
[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.0"
ipython = "^8.15"
notebook = "^7.0"

# Deep learning dependencies
[tool.poetry.group.dl]
optional = true

[tool.poetry.group.dl.dependencies]
torch = "^2.8"
torchvision = "^0.23"
torchaudio = "^2.8"
tensorflow = "^2.13"

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.0"
black = "^24.7"
isort = "^5.12"
flake8 = "^7.0"
mypy = "^1.5"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
